--- a/index.html
+++ b/index.html
@@ -186,11 +186,7 @@
   fireballSize = 22;
 
   var getFireballSpeed = function (left) {
-    if (left) {
-      return 5;
-    } else {
-      return 2;
-    }
+    return left ? 5 : 2;
   };
 
   var wizardSpeed = 3;
