--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
 </template>
 
 <script>
-  var fireballSize;
-  fireballSize = 22;
+  var fireballSize = 22;
 
   var getFireballSpeed = function (left) {
     return left ? 5 : 2;
@@ -201,7 +200,7 @@
   }
 
   var getWizardY = function (height) {
-    return height/3 - getWizardHeight()/2;
+    return height*2/3 - getWizardHeight()/2;
   }
 
 </script>
