module5-task1 complited

--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
 </template>
 
 <script>
-  // aaa
   var fireballSize = 22;
 
   var getFireballSpeed = function (left) {
@@ -206,8 +205,13 @@
   }
 
 </script>
+<script src="js/vars.js"></script>
+<script src="js/util.js"></script>
 <script src="js/setup.js"></script>
-<script src="js/stat.js"></script>
+<script src="js/dialog.js"></script>
+<script src="js/validate.js"></script>
+<script src="js/wizardCustomisation.js"></script>
+<script src="js/renderStatistics.js"></script>
 <script src="js/game.js"></script>
 
 </body>
