--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <div class="setup-footer">
-      <div class="setup-similar hidden">
+      <div class="setup-similar">
 
         <h4 class="setup-similar-title">Похожие персонажи</h4>
 
@@ -207,6 +207,8 @@
 <script src="js/vars.js"></script>
 <script src="js/util.js"></script>
 <script src="js/colorize-element.js"></script>
+<script src="js/render.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/validate.js"></script>
